[package]
name = "cw-unsuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.0"
aws-sdk-cloudwatch = "0.29.0"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.29.0"
anyhow = "1"
aws-sdk-cloudwatchlogs = "0.29.0"
clap = { version = "4.4.0", features = ["derive"] }
futures = "0.3.28"
dirs = "5.0.1"
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"